Fix icon alignment

--- a/src/components/Commands/commands.scss
+++ b/src/components/Commands/commands.scss
@@ -90,6 +90,8 @@
         gap: var(--space-m);
 
         .vui-commands-list-item-icon {
+          display: flex;
+          align-items: center;
           font-size: var(--font-size-l);
           color: var(--color-text-light);
         }
